Version 1.5 (#221)
* Try to scale up the 2x screenshots

* Remove assertFxThread method

* Fix general help message

* Update run configurations

* #192 Move settings menu item to help menu

* Move the screenshot location

* #191 Notice does not immediately close in notice tool

* #190 Show update download size in front of progress bar

* Improved status monitor colors

* Setting API improvements

* Setting API improvements

* Improve the setting editor implementations

* Improve the settings implementation

* Improve the settings implementation

* Improve Notice creation process

* Continue work on draw modes

* Improve notice uniqueness

* Enhance Fx class

* Trigger build

* Update actions to support commands

* Set default scene fill to black

* Add FPS monitor

* Add FPS monitor

* Fix guide tool expand/collapse issue

* Reselect guide nodes when focused

* Fix hidden action shortcuts...again

* Reselect guide nodes when focused

* Reselect guide nodes when focused

* Cleanup

* Improve product bundles

* Improve product bundles

* Disable guide reselect

* Add paint picker styles

* Introduce new Rb implementation

* Trigger build

* Trigger build

* Trigger build

* Trigger build

* Trigger build

* Screenshot tweaks

* Fix event name collision

* Work on paint picker

* Work on paint picker

* Deprecate use of ProductBundle

* Remove ProductBundle

* Trigger build

* Improve paint picker

* Disable hidden actions...again

* Trigger build

* #199 Add guide focus events

* #197 Fix hidden actions not working properly

* #198 Work on auto-save

* Work on node preview

* Trigger build

* Enhance undo manager to support merges

* #187 Working on multiple property changes as one undoable change

* #187 Working on multiple property changes as one undoable change

* Programmer notes

* Update undo manager to use Txn events

* Cleanup undo manager wor